kubernetes/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-dev
  labels:
    environment: development
