kubernetes/overlays/dev/blog-api-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api
spec:
  selector:
    app: blog-api
