kubernetes/overlays/dev/blog-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-admin
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      allow 192.168.50.0/24;
      allow 10.100.0.0/24;
      deny all;
spec:
  ingressClassName: public
  rules:
  - host: dev.petedillo.com
    http:
      paths:
      - path: /admin/
        pathType: Prefix
        backend:
          service:
            name: blog-ui
            port:
              number: 80
      - path: /api/v1/admin/
        pathType: Prefix
        backend:
          service:
            name: blog-api
            port:
              number: 8080
