kubernetes/overlays/dev/blog-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api
spec:
  ingressClassName: public
  rules:
  - host: dev.petedillo.com
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: blog-api
            port:
              number: 8080
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: blog-api
            port:
              number: 8080
