kubernetes/overlays/dev/ui-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ui
spec:
  rules:
  - host: blog.homelab.local
